--- a/src/styles/Leaderboard.scss
+++ b/src/styles/Leaderboard.scss
@@ -1,7 +1,7 @@
 @import 'variables';
 
 .leaderboard {
-  background: $card-bg;
+  background: #45404040;//$card-bg;
   border: 1px solid $card-border;
   border-radius: $border-radius-lg;
   padding: $spacing-lg;
