--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -53,12 +53,13 @@
   margin-bottom: $spacing-xl;
 
   h1 {
+    color:#fff ;
     font-size: clamp(2rem, 5vw, 3.5rem);
     font-weight: 700;
-    background: linear-gradient(135deg, #ffffff 0%, #b4bcd0 100%);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    background-clip: text;
+    // background: linear-gradient(135deg, #ffffff 0%, #b4bcd0 100%);
+    // -webkit-background-clip: text;
+    // -webkit-text-fill-color: transparent;
+    // background-clip: text;
     margin-bottom: $spacing-sm;
     letter-spacing: -0.02em;
   }
