--- a/src/styles/Leaderboard.scss
+++ b/src/styles/Leaderboard.scss
@@ -66,9 +66,10 @@
 //   }
 // }
 .leaderboard {
-  background: #23242aee; // Slightly darker for contrast
+  background: #45404040;//#23242aee; // Slightly darker for contrast
   border-radius: $border-radius-lg;
   padding: $spacing-lg;
+ backdrop-filter: blur(10px);
   position: relative;
   overflow: hidden;
   z-index: 1;
@@ -97,7 +98,7 @@
     pointer-events: none;
     z-index: 2;
     opacity: 0.85;
-    animation: leaderboard-glow 6s linear infinite;
+    animation: leaderboard-glow 3s linear infinite;
   }
 }
 
