--- a/src/styles/Leaderboard.scss
+++ b/src/styles/Leaderboard.scss
@@ -66,7 +66,7 @@
 //   }
 // }
 .leaderboard {
-  background: #45404040;//#23242aee; // Slightly darker for contrast
+  background: #23242aee; // Slightly darker for contrast
   border-radius: $border-radius-lg;
   padding: $spacing-lg;
  backdrop-filter: blur(10px);
